cambios de nombres de las imagenes

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'style/Home.css' %}">
+<link rel="stylesheet" href="{% static 'style/home.css' %}">
 {% endblock %}
 
 {% block content %}
