tomando encuenta los nombres de las imagenes

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -15,19 +15,19 @@
     </p>
 <ul>
     <li>
-        <img src="{% static 'img/lenguajes/html5.svg' %}" alt="HTML" class="icono">
+        <img src="{% static 'img/Lenguajes/html5.svg' %}" alt="HTML" class="icono">
         HTML
     </li>
     <li>
-        <img src="{% static 'img/lenguajes/css.svg' %}" alt="CSS" class="icono">
+        <img src="{% static 'img/Lenguajes/css.svg' %}" alt="CSS" class="icono">
         CSS
     </li>
     <li>
-        <img src="{% static 'img/lenguajes/javascript.svg' %}" alt="JavaScript" class="icono">
+        <img src="{% static 'img/Lenguajes/javascript.svg' %}" alt="JavaScript" class="icono">
         JavaScript
     </li>
     <li>
-        <img src="{% static 'img/lenguajes/python.svg' %}" alt="Python" class="icono">
+        <img src="{% static 'img/Lenguajes/python.svg' %}" alt="Python" class="icono">
         Python
     </li>
 </ul>
@@ -37,7 +37,7 @@
 
         <ul>
             <li>
-                <img src="{% static 'img/lenguajes/django.svg' %}" alt="Django" class="icono">
+                <img src="{% static 'img/Lenguajes/django.svg' %}" alt="Django" class="icono">
                 django
             </li>
         </ul>
