--- a/staticfiles/style/home.css
+++ b/staticfiles/style/home.css
@@ -1,10 +1,10 @@
 
 .inicio {
+    width: 350px;
     max-width: 800px;
-    margin: 80px auto;
+    margin: 15px auto;
     padding: 40px;
-    
-   background: var(--color-blanco);
+    background: var(--color-blanco);
     border-radius: 12px;
     box-shadow: var(--sombra);
     text-align: center;
